fix gap at menu

--- a/source/wp-content/themes/edex/sass/_content.scss
+++ b/source/wp-content/themes/edex/sass/_content.scss
@@ -14,6 +14,7 @@
     }
     h4{
         margin: 20px 0 8px;
+        font-family: 'Orbitron-Medium', sans-serif;
     }
     .wpb_button{
         margin-top: 20px !important;
