--- a/source/wp-content/themes/edex/sass/_tablet.scss
+++ b/source/wp-content/themes/edex/sass/_tablet.scss
@@ -76,7 +76,7 @@ a img {
             position: static;
             width: auto;
             background-color: inherit;
-            margin: 0;
+            margin: 0 0 10px;
             li{
                 border-top:none;
                 text-transform: uppercase;
@@ -182,6 +182,16 @@ main{
         article{
             margin-top: 40px;
             @include clearfix;
+            &.has-thumbnail{
+                .summary{
+                    margin: 7px 0 0 165px;
+                }
+                .title-area{
+                    display: table-cell;
+                    height: 145px;
+                    vertical-align: middle;
+                }
+            }
             .blog-list{
                 float: left;
                 margin: 0 20px 15px 0;
@@ -189,11 +199,6 @@ main{
             h2{
                 font-size: 32px;
                 line-height: 34px;
-            }
-            .title-area{
-                display: table-cell;
-                height: 145px;
-                vertical-align: middle;
             }
             .body{
                 h1{
@@ -209,9 +214,6 @@ main{
             }
             .date, .author, .categories{
                 font-size: 14px;
-            }
-            .summary{
-                margin: 7px 0 0 165px;
             }
             .view-article{
                 margin: 0 0 10px;
@@ -241,7 +243,7 @@ main{
 }
 
 .wheel-wrapper{
-    margin: 45px 0;
+    margin: 35px 0 45px;
     .wheel{
         display: block;
     }
